--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.0",
     "next": "14.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18",
