--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
     "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "^18",
