--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "googleapis": "^128.0.0",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "nookies": "^2.5.2",
